infra/k8s/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paycrest-route
  namespace: pc-gateway
spec:
  parentRefs:
    - name: paycrest-kgate
  rules:
    - matches: 
      - path:
          type: Exact
          value: /health
      backendRefs:
        - name: frontend
          namespace: pc-frontend
          port: 80
    - matches:
        - path: 
            type: PathPrefix
            value: /api
      backendRefs:
        - name: api-gateway
          port: 3000
          namespace: pc-edge
    - matches:
        - path: 
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
          namespace: pc-frontend
