infra/k8s/network-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-app
  namespace: pc-data
spec:
  podSelector:
    matchLabels:
      app: mongodb 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: pc-app
    ports:
    - protocol: TCP
      port: 27017
